@@ -1,5 +1,8 @@
 Changes with Apache 2.0.37
 
+  *) Rewrite mod_cgi's input handling to use brigades and input
+     filters.  [Justin Erenkrantz]
+
   *) Allow ap_http_filter (HTTP_IN) to return EOS when there is no request
      body.  [Justin Erenkrantz]
     
